deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pluribusai
spec:
  selector:
    app: pluribusai
  ports:
    - port: 8787
      targetPort: 8787
